
2016-11-01  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed preprocessed compile for new line
	  number processing and added an error preprocessed test case.

2016-10-31  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added header/trailer to file not found 
	  test case.

2016-10-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobol85/Makefile.am, cobol85/report.pl: added support for make with
	  multiple jobs (only done when building the test directories)

2016-10-29  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings-sed.sh: Fixed for generic 9 character version.
	* testsuite.src/listings.at: Fixed for generic 9 character version.

2016-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in: pass COB_HAS_UTC_OFFSET, set PATHSEP and COB_HAS_CURSES
	  for MinGW
	* testsuite.src/listings-sed.sh: fix for patchlevel up to 999  
	* testsuite.src/configuration.at, testsuite.src/used_binaries.at:
	  used `cobc -q` (instead of sed script) to simplify "unrecognized option"
	* testsuite.src/run_misc.at: define NULL if needed
	* testsuite.src/run_accept.at: evaluate COB_HAS_CURSES
	* testsuite.src/run_functions.at: evaluate COB_HAS_UTC_OFFSET
	* testsuite.src/configuration.at: evaluate PATHSEP

2016-10-22  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added --no_symbols test.

2016-10-18  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added some sequence numbers to a couple of
	  examples. Would have caught the SOURCEFORMAT VARIABLE bug.

2016-10-17  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in, atlocal_win: added UNIFY_LISTING
	* testsuite.src/listings.at: moved simplified sed commands used to a single
	  script listings-sed.sh and use this via UNIFY_LISTING
	* testsuite.src/listings.at: split symbols test, added test for -tlines,
	  use -tlines=0 to remove unforced page breaks
	* atlocal_win: added missing COB_HAS_UTC_OFFSET
